# paneldecontrol

./: Cargo.toml  README.md  config.toml  guia.txt
.github/workflows/: ci.yml
src/: dirs.rs  main.rs
src/config/: mod.rs
src/core/: app.rs  event.rs  layout.rs  mod.rs  persist.rs  terminal.rs
src/theme/: mod.rs
src/widgets/: btc.rs  clock.rs  dolar.rs  mod.rs  player.rs  rss.rs  sistema.rs  static_text.rs  weather.rs
